Fix input overflow issue

--- a/src/styles/components/_search.scss
+++ b/src/styles/components/_search.scss
@@ -1,6 +1,8 @@
 .search {
-	@include center;
+	display: flex;
+	align-items: center;
 	position: relative;
+	overflow-x: hidden;
 
 	&__icon {
 		@include center;
@@ -20,16 +22,22 @@
 		}
 	}
 
-	&__input {
+	&__input-wrapper {
 		flex: 1 0;
-		appearance: none;
-		border: none;
+		padding-left: 3.5rem;
+		display: flex;
+		background-color: $black;
+	}
+
+	&__input {
+		width: 100%;
 		font-size: 2rem;
 		padding: 0.5rem;
-		padding-left: 3.5rem;
 		color: $yellow;
-		background-color: $black;
 		font-family: $space-bold;
+		background-color: transparent;
+		appearance: none;
+		border: none;
 
 		&:focus {
 			outline: none;
